crash: clicking in edit mode after wireframe object is disabled in viewport #65002

Closed
opened 2019-05-22 20:56:22 +02:00 by Casey Connor · 5 comments

Blender crashes (when in wireframe mode) after entering edit mode, disabling the object's viewport visibility, and then clicking in the viewport.

Operating system: Kubuntu Linux 18.10 -- 4.18.0-20-generic #21-Ubuntu SMP Mon May 6 18:45:52 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1)

Broken: 2.80, 85322737ba, 2019-05-22 08:33

  • start blender with no profile directory
  • change to wireframe mode
  • enter edit mode
  • in outliner, click "eye" icon to disable default cube object viewport display
  • click anywhere in viewport

blender.crash.txt:

Blender 2.80 (sub 71), Commit date: 2019-05-22 08:33, Hash 85322737ba

bpy.data.screens["Layout"].shading.type = 'WIREFRAME' # Property
bpy.ops.object.editmode_toggle() # Operator
bpy.context.object.hide_viewport = True # Property

backtrace

/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x137fe6d]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x1167ad9]
/lib/x86_64-linux-gnu/libc.so.6(+0x41100) [0x7fbba7fb7100]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(BKE_editmesh_from_object+0) [0x11de890]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(ED_view3d_viewcontext_init_object+0x22) [0x2d102b2]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(EDBM_select_pick+0x125) [0x2bde395]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x2d0fe8b]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x152cdcd]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x153010a]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x1530b10]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x153155b]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(wm_event_do_handlers+0x41d) [0x15319ed]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(WM_main+0x20) [0x1528010]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(main+0x30a) [0x10cde1a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7fbba7f9a09b]
/path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(_start+0x2a) [0x11643ea]

Blender crashes (when in wireframe mode) after entering edit mode, disabling the object's viewport visibility, and then clicking in the viewport. Operating system: Kubuntu Linux 18.10 -- 4.18.0-20-generic #21-Ubuntu SMP Mon May 6 18:45:52 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux Graphics card: NVIDIA Corporation GP106 [GeForce GTX 1060 6GB] (rev a1) Broken: 2.80, 85322737baec, 2019-05-22 08:33 * start blender with no profile directory * change to wireframe mode * enter edit mode * in outliner, click "eye" icon to disable default cube object viewport display * click anywhere in viewport blender.crash.txt: # Blender 2.80 (sub 71), Commit date: 2019-05-22 08:33, Hash 85322737baec bpy.data.screens["Layout"].shading.type = 'WIREFRAME' # Property bpy.ops.object.editmode_toggle() # Operator bpy.context.object.hide_viewport = True # Property # backtrace /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x137fe6d] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x1167ad9] /lib/x86_64-linux-gnu/libc.so.6(+0x41100) [0x7fbba7fb7100] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(BKE_editmesh_from_object+0) [0x11de890] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(ED_view3d_viewcontext_init_object+0x22) [0x2d102b2] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(EDBM_select_pick+0x125) [0x2bde395] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x2d0fe8b] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x152cdcd] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x153010a] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x1530b10] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender() [0x153155b] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(wm_event_do_handlers+0x41d) [0x15319ed] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(WM_main+0x20) [0x1528010] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(main+0x30a) [0x10cde1a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7fbba7f9a09b] /path/to/blender/blender-2.80-85322737baec-linux-glibc224-x86_64/blender(_start+0x2a) [0x11643ea]
Author

Added subscriber: @clepsydrae

Added subscriber: @clepsydrae
Author

(Also happened in 9efe117535c6.)

(Also happened in 9efe117535c6.)
George Vogiatzis self-assigned this 2019-05-22 21:31:18 +02:00

This issue was referenced by 352474ced8

This issue was referenced by 352474ced8e1e7c34b08c20dafd594b92eda6f14

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Confirmed that it's fixed here as well. Thanks!

Confirmed that it's fixed here as well. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65002
No description provided.