Fix T65002: after hiding edit mode object, clicking in wireframe mode crashes

Differential Revision: https://developer.blender.org/D4926